# appa

./: .gitignore  .goreleaser.yml  .travis.yml  Cargo.toml  LICENSE  install.sh
src/: api.rs  cli.rs  config.rs  consumer.rs  cordinator.rs  error.rs  hub.rs  lib.rs  main.rs  processor.rs  queue.rs  storage.rs  task.rs
src/api/: common.rs  mod.rs  task.rs
src/commands/: link.rs  mod.rs  new.rs  processor.rs  prop.rs  run.rs  setter.rs  task.rs
src/commands/execution/: api.rs  functions.rs  mod.rs  structs.rs
src/commands/link/: api.rs  functions.rs  mod.rs  structs.rs
src/commands/processor/: api.rs  functions.rs  mod.rs  structs.rs
src/commands/prop/: api.rs  functions.rs  mod.rs  structs.rs
src/commands/task/: api.rs  functions.rs  mod.rs  structs.rs
src/config/: entity.rs  mod.rs  processor.rs  task.rs  tasks.rs
src/core/: storage.rs
tests/: config.rs  processor.rs
tests/mocks/: collector1.py  collector2.py  config1.yml  map.py  reduce.py  task1.py  task2.py
tests/mocks/tasks/: task.py
