[package]
name = "appa"
version = "0.0.1"
authors = [
    "Guilherme Diego <guilherme.albino.francisco@gmail.com>",
    "Mateus Freira <mateus@tenfold.com>"
]

[dependencies]
serde = "1.0.33"
serde_json = "1.0"
serde_yaml = "0.7"
serde_derive = "1.0"
rayon = "1.0"
itertools = "0.7.3"
# uuid = { version = "0.6", features = ["v4"] }
# rocksdb = "0.10.0"
